[tool.poetry]
name = "gate-up"
version = "1.2.0"
description = "Metrics translator from scaled services to pushgateway"
authors = ["Nik Mikhaylichenko <nn.mikh@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
docker = "~=5.0"
prometheus-client = "~=0.14"
glom = "^23.3.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
